hphp/test/slow/traits/requireclass/requireclass_nonfinal_01.bad.php.expectf
Fatal error: Trait 'T' may only be used from class 'C', which must be final in %s/requireclass_nonfinal_01.bad.php on line 6
